--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -16,6 +16,7 @@ div#portal{
   &>div#main{
     height:100%;
     display:flex;
+    background-color:#546e7a;
     &>div#sidenav{
       width:70px;
       @include paint(#263238);
