--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -19,7 +19,8 @@ div#portal{
     background-color:#546e7a;
     &>div#sidenav{
       width:70px;
-      @include paint(#263238);
+      background-color:#263238;
+      border-right:1px outset #263238;
       display:flex;
       flex-direction:column;
       justify-content:space-between;
