--- a/src/app/components/Open/styles.scss
+++ b/src/app/components/Open/styles.scss
@@ -19,6 +19,7 @@ div#open{
       background-color:transparent;
       border:1px solid #b0bec5;
       border-radius:3px;
+      outline:none;
     }
     &>div#mobile{
       display:flex;
@@ -30,9 +31,16 @@ div#open{
       color:#263238;
       font-size:1.2em;
       font-weight:500;
-      @include paint(#b0bec5);
+      @include paint(#42a5f5);
       height:40px;
       width:45%;
+      color:white;
+      &:hover{
+        box-shadow:0px 0px 10px #42a5f5;
+      }
+      &:focus{
+        outline:none;
+      }
     }
     &>div.actions{
       display:inline-block;
@@ -56,6 +64,9 @@ div#open{
         font-size:1.2em;
         font-weight:500;
         @include paint(#d32f2f);
+        &:hover{
+          box-shadow:0px 0px 10px #d32f2f;
+        }
       }
     }
   }
