feature(home-page):update homepage components

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 body{
   font-family:"Segoe UI", Courier, Verdana, Helvetica;
   font-size:16px;
+  background-image:linear-gradient(#cfd8dc,#b0bec5);
 }
 
 html, body, div#root{
