update general features

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,17 @@ div#root{
 ul{
   list-style-type:none;
 }
+.fade-enter{
+  opacity:0;
+}
+.fade-enter-active{
+  opacity:1;
+  transition:opacity 100ms linear;
+}
+.fade-exit{
+  opacity:1;
+}
+.fade-exit-active{
+  opacity:0;
+  transition:opacity 100ms linear;
+}
