--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -5,15 +5,19 @@ div#portal{
   flex-direction:column;
   &>div#header{
     height:50px;
+    padding:0.2em;
     @include paint(#263238);
     display:flex;
     justify-content:space-between;
     &>div{
       display:flex;
     }
-    & div#logo > img{
-      width:50px;
+    & div#logo{
+      width:70px;
       cursor:pointer;
+      &>img{
+        height:100%;
+      }
     }
   }
   &>div#main{
@@ -35,5 +39,28 @@ div#portal{
   }
   & .level-100{
     z-index:100;
+  }
+}
+
+div#header{
+  & button{
+    height:40px;
+    padding:0 0.3em;
+    color:white;
+    font-size:1.1em;
+    font-weight:500;
+    background-image:linear-gradient(#455a64,#546e7a,#455a64);
+    border-radius:3px;
+    border:2px double #546e7a;
+    &:focus{
+      background-image:none;
+      background-color:transparent;
+    }
+    &>svg{
+      float:left;
+      width:1.5em;
+      height:1.5em;
+      margin-right:5px;
+    }
   }
 }
