fetures(investor-portal):Update investor portal features

--- a/src/app/components/Open/styles.scss
+++ b/src/app/components/Open/styles.scss
@@ -38,13 +38,19 @@ div#open{
         border-radius:0 3px 3px 0;
       }
     }
+    &>div.actions{
+      display:flex;
+      justify-content:space-between;
+      height:40px;
+      line-height:40px;
+    }
     & button{
       color:#263238;
       font-size:1.2em;
       font-weight:500;
       @include paint(#42a5f5);
       height:40px;
-      width:50%;
+      width:40%;
       color:white;
       &:hover{
         box-shadow:0px 0px 10px #42a5f5;
@@ -67,6 +73,14 @@ div#open{
         &:hover{
           box-shadow:0px 0px 10px #d32f2f;
         }
+      }
+    }
+    & a{
+      color:#42a5f5;
+      text-decoration:none;
+      font-size:1em;
+      &:hover{
+        text-decoration:underline;
       }
     }
   }
