features(select-trader-item):develop trade features

--- a/src/app/components/Open/styles.scss
+++ b/src/app/components/Open/styles.scss
@@ -50,7 +50,7 @@ div#open{
       font-weight:500;
       @include paint(#42a5f5);
       height:40px;
-      width:40%;
+      width:150px;
       color:white;
       &:hover{
         box-shadow:0px 0px 10px #42a5f5;
@@ -78,7 +78,7 @@ div#open{
     & a{
       color:#42a5f5;
       text-decoration:none;
-      font-size:1em;
+      font-size:0.8em;
       &:hover{
         text-decoration:underline;
       }
