feature(trade):select trade item features

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
   padding:0;
   box-sizing:border-box;
   outline:none;
+  scrollbar-width:10px;
 }
 body{
   font-family:"Segoe UI", Verdana, Helvetica;
