--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
   padding:0;
   box-sizing:border-box;
   outline:none;
-  scrollbar-width:10px;
+  scrollbar-width:thin;
 }
 body{
   font-family:"Segoe UI", Verdana, Helvetica;
