feature(trade):Update trade features

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 body{
   font-family:"Segoe UI", Verdana, Helvetica;
   font-size:16px;
-  background-image:url("./app/data/images/main-background.jpg");
+  background-image:url("/assets/images/main-background.jpg");
 }
 
 html, body, div#root{
