--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -23,7 +23,7 @@ div#portal{
   &>div#main{
     height:100%;
     display:flex;
-    background-color:#546e7a;
+    background-color:#000033;
     &>div#sidenav{
       width:70px;
       background-color:#263238;
