feature(investar):develop help page, update other features

--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -37,7 +37,7 @@ div#portal{
   &>div#main{
     height:100%;
     display:flex;
-    background-color:#000033;
+    background-color:#455a64;
     &>div#sidenav{
       width:70px;
       background-color:#263238;
