feature(investar): add portal loader, update other features

--- a/src/app/components/Portal/Trade/Chart/styles.scss
+++ b/src/app/components/Portal/Trade/Chart/styles.scss
@@ -23,6 +23,12 @@ svg.chart{
     fill:white;
   }
   
+  &.timeseries{
+    & line.wick{
+      stroke-width:0.5;
+    }
+  }
+  
   &.volume{
     & rect.bar{
       fill:red;
