feature(portal): Add fullscreen function

--- a/src/app/components/Portal/styles.scss
+++ b/src/app/components/Portal/styles.scss
@@ -20,7 +20,7 @@ div#portal{
       }
     }
     
-    & div.sidebar{
+    & div.icon.control{
       width:60px;
       &:hover{
         background-color:#37474f;
