--- a/src/app/components/Portal/Trade/Chart/styles.scss
+++ b/src/app/components/Portal/Trade/Chart/styles.scss
@@ -8,7 +8,7 @@ svg.chart{
     stroke-opacity:0.3;
   }
 
-  & .indicator{
+  & line.indicator{
     stroke:#FFFF00;
     stroke-opacity:1;
     stroke-width:0.3;
@@ -72,5 +72,30 @@ svg.axis{
   }
   & .tick text{
     fill:white;
+  }
+  & > g.pointer{
+    &>rect{
+      height:20px;
+      fill:#ffab00;
+      fill-opacity:0.8;
+    }
+    &>text{
+      stroke:white;
+      stroke-width:0.8;
+      text-anchor:middle;
+      fill:none;
+      font-size:0.8em;
+      font-family:Arial;
+    }
+  }
+  &.y > g.pointer{
+    &>rect{
+      width:100%;
+    }
+  }
+  &.x > g.pointer{
+    &>rect{
+      width:100px;
+    }
   }
 }
