--- a/src/app/components/Portal/Trade/Chart/styles.scss
+++ b/src/app/components/Portal/Trade/Chart/styles.scss
@@ -8,10 +8,18 @@ svg.chart{
     stroke-opacity:0.3;
   }
 
-  & line.indicator{
-    stroke:#FFFF00;
-    stroke-opacity:1;
-    stroke-width:0.3;
+  & g.indicator{
+    &> line{
+      stroke:#FFFF00;
+      stroke-opacity:1;
+      stroke-width:0.3;
+    }
+    &>rect{
+      stroke:none;
+      fill:none;
+      width:100%;
+      height:100%;
+    }
   }
   
   & > rect.zoombase, > rect.bg{
