chore(trade):Update a section of the code to use web workers

--- a/src/app/components/Portal/Trade/Chart/styles.scss
+++ b/src/app/components/Portal/Trade/Chart/styles.scss
@@ -88,10 +88,10 @@ svg.axis{
       fill-opacity:0.8;
     }
     & > text{
-      stroke:white;
+      stroke:#212121;
       stroke-width:0.8;
       text-anchor:middle;
-      fill:none;
+      fill:#212121;
       font-size:0.8em;
       font-family:Arial;
     }
